elempic_DATA = Al.jpg Be.jpg Br.jpg Ca.jpg Cl.jpg Co.jpg Fe.jpg Ge.jpg H.jpg Kr.jpg Mn.jpg Nb.jpg N.jpg Pd.jpg Re.jpg Se.jpg Sn.jpg Th.jpg V.jpg Zn.jpg As.jpg Bi.jpg Cd.jpg Cr.jpg F.jpg He.jpg In.jpg I.jpg Li.jpg Mo.jpg Ne.jpg O.jpg P.jpg Rh.jpg Si.jpg Ta.jpg Ti.jpg W.jpg Zr.jpg Au.jpg B.jpg C.jpg Cu.jpg Ga.jpg Hg.jpg K.jpg Mg.jpg Na.jpg Ni.jpg Pb.jpg Pt.jpg Sb.jpg S.jpg Te.jpg U.jpg Xe.jpg
elempicdir = $(kde_datadir)/kalzium/elempics

