



########### install files ###############

install( FILES characteristics.png density.png header.png icons.svg radius.png structure.png style.css mass.png book.png boilingpoint.png meltingpoint.png ionisation.png electronaffinity.png discovery.png abundance.png  DESTINATION  ${DATA_INSTALL_DIR}/kalzium/data/htmlview )




#original Makefile.am contents follow:

#appdatadir = $(kde_datadir)/kalzium/data/htmlview
#appdata_DATA = characteristics.png density.png header.png icons.svg radius.png structure.png style.css mass.png book.png boilingpoint.png meltingpoint.png ionisation.png electronaffinity.png discovery.png abundance.png
#
