kde4_header()



add_subdirectory(bcc)
add_subdirectory(fcc)
add_subdirectory(rbg)
add_subdirectory(rpg)
add_subdirectory(simple-cubic)
add_subdirectory(tpg)
add_subdirectory(trg)


########### install files ###############


kde4_footer()



#original Makefile.am contents follow:

#SUBDIRS = $(AUTODIRS)
