install( FILES 
                2_2_2-trifluoroethanol.cml  but-2-yne-1_4-diol.cml  ethane-1_2-diol.cml  methane.cml   porphyrin.cml    propane.cml
                2-aminoethanol.cml          butane.cml              ethane.cml           methanol.cml  propan-1-ol.cml  thiophene.cml
                2-thioethanol.cml           CMakeLists.txt          ethanol.cml          pentane.mol   propan-2-ol.cml
	DESTINATION  ${DATA_INSTALL_DIR}/kalzium/data/molecules )
