install( FILES
    beaker.jpg
    burner.jpg
    clamp.jpg
    contact-thermometer.jpg
    cork-ring.jpg
    dehydrator.jpg
    differential-scanning-calorimeter.jpg
    distillation-bridge.jpg
    dropping-funnel.jpg
    drying-tube.jpg
    erlenmeyer-flask.jpg
    full-pipette.jpg
    fume-hood.jpg
    gas-syringe.png
    heating-plate.jpg
    hplc.jpg
    indicator-paper.jpg
    magnetic-stir-bar.jpg
    measuring-cylinder.jpg
    mortar.jpg
    pipette-bulb.jpg
    pipette.jpg
    protective-goggles.jpg
    reflux-condenser.jpg
    refractometer.jpg
    rotary-evaporator.jpg
    round-bottom-flask.jpg
    scale.jpg
    separating-funnel.jpg
    separation-beaker.jpg
    short-stem-funnel.jpg
    spatula.jpg
    test-tube-holder.jpg
    test-tube-rack.jpg
    test-tube.jpg
    thermometer.jpg
    thermometer2.jpg
    tonschale.jpg
    wash-bottle.jpg
    watchglass.jpg
    water-jet-pump.jpg
    DESTINATION  ${KDE_INSTALL_DATADIR}/kalzium/data/toolpics
)
