install( FILES
    abzug.jpg
    becherglas.jpg
    brechungsmesser.jpg
    brenner.jpg
    destillierbruecke.jpg
    dewar-vessel.jpg
    dsc.jpg
    erlenmeyerkolben.jpg
    exikator.jpg
    halter.jpg
    heizplatte.jpg
    hplc.jpg
    kolbenprober.png
    korkring.jpg
    magnetic-stir-bar-retriever.jpg
    messzylinder.jpg
    moerser.jpg
    phpapier.jpg
    pileusball.jpg
    pipette.jpg
    rg-halter.jpg
    rg-staender.jpg
    rg.jpg
    rotationsverdampfer.jpg
    rueckflusskuehler.jpg
    ruehrfisch.jpg
    rundkolben.jpg
    scheidetrichter.jpg
    schutzbrille.jpg
    spatel.jpg
    spritzflasche.jpg
    thermometer.jpg
    thermometer2.jpg
    tonschale.jpg
    trichter.jpg
    trockenrohr.jpg
    tropftrichter.jpg
    uhrglas.jpg
    ultrasonic-bath.jpg
    verteiler.jpg
    vollpipette.jpg
    waage.jpg
    wasserstrahlpumpe.jpg
    DESTINATION  ${KDE_INSTALL_DATADIR}/kalzium/data/toolpics
)
